crates/cuda-macros/tests/compile_fail/device_extern_wrong_abi.rs
use cuda_macros::device;

#[device]
unsafe extern "Rust" {
    fn wrong_abi(value: *mut f32);
}

fn main() {}
